--- a/frontend/src/components/Dashboard/CardModal/CreateButton.css
+++ b/frontend/src/components/Dashboard/CardModal/CreateButton.css
@@ -2,6 +2,7 @@
     width: 120px;
 }
 .create-button-container{
+    padding-top: 18px;
     display: flex;
     flex-direction: column;
     align-items: center;
